@@ -151,7 +151,9 @@ array.
      </para>
  </callout>
     </calloutlist>
-</programlistingco --> <!--     para>
+</programlistingco --> 
+<!--
+<para>
 <equation>
 <title>My MathML example</title>
 <mml:math xmlns:mml="http://www.w3.org/1998/Math/MathML">
@@ -163,6 +165,7 @@ array.
   </mml:mrow>
 </mml:math>
 </equation>
-      </para     -->
+</para>
+-->
 </preface>
 
