@@ -8,7 +8,7 @@ _publican()
 	cur=`_get_cword`
         brands=`ls /usr/share/publican/Common_Content`
 
-	commands='build bump clean clean_ids clean_set create create_brand create_site help_config install_book install_brand lang_stats old2new package print_banned print_known print_tree print_unused remove_book site_stats update_po update_pot update_site'
+	commands='build bump clean clean_ids clean_set create create_brand create_site help_config install_book install_brand lang_stats old2new package print_banned print_known print_tree print_unused remove_book site_stats update_db update_po update_pot update_site'
 
 	if [[ $COMP_CWORD -eq 1 ]] ; then
 		if [[ "$cur" == -* ]]; then
@@ -105,6 +105,9 @@ _publican()
 					;;
 				site_stats)
 					options='--site_config '
+					;;
+				update_db)
+					options='--abstract --add --del --formats --lang --name --name_label --product --product_label --site_config --subtitle --version --version_label '
 					;;
 				update_po)
 					options='--langs '
