@@ -111,11 +111,11 @@ desktop-file-install --dir=${RPM_BUILD_ROOT}%{_datadir}/applications <xsl:value-
 
 %preun -n <xsl:value-of select="$book-title"/>-web-<xsl:value-of select="$lang"/>
 if [ "$1" = "0" ] ; then # last uninstall
-%{__perl} -e 'if (eval {require Publican::WebSite}) { my @formats = qw(<xsl:value-of select="$web_formats" />); my $ws = Publican::WebSite->new(); foreach my $format (@formats) { $ws->del_entry({ language => "<xsl:value-of select="$lang"/>", product => "<xsl:value-of select="$prod" />", version => "<xsl:value-of select="$prodver" />", name => "<xsl:value-of select="$docname" />", format => "$format"} ); } $ws->regen_all_toc();}';
+publican update_db --del --lang="<xsl:value-of select="$lang"/>" --formats=<xsl:value-of select="$web_formats_comma" /> --name="<xsl:value-of select="$docname" />" --version="<xsl:value-of select="$prodver" />" --product="<xsl:value-of select="$prod" />"
 fi
 
 %post -n <xsl:value-of select="$book-title"/>-web-<xsl:value-of select="$lang"/>
-%{__perl} -e $'use Publican::WebSite; my @formats = qw(<xsl:value-of select="$web_formats" />); my $ws = Publican::WebSite->new(); foreach my $format (@formats) { $ws->update_or_add_entry( { language => "<xsl:value-of select="$lang"/>", product => "<xsl:value-of select="$prod" />", version => "<xsl:value-of select="$prodver" />", name => "<xsl:value-of select="$docname" />", format => "$format", product_label => "<xsl:value-of select="$product_label" />", version_label => "<xsl:value-of select="$version_label" />", name_label => "<xsl:value-of select="$name_label" />", subtitle => q{<xsl:value-of select="$full_subtitle"/>}, abstract => q{<xsl:value-of select="$full_abstract" />} }); } $ws->regen_all_toc();'
+publican update_db --add --lang="<xsl:value-of select="$lang"/>" --formats="<xsl:value-of select="$web_formats_comma" />" --name="<xsl:value-of select="$docname" />" --version="<xsl:value-of select="$prodver" />" --product="<xsl:value-of select="$prod" />" --subtitle="<xsl:value-of select="$full_subtitle"/>" --abstract="<xsl:value-of select="$full_abstract" />" <xsl:if test="$name_label != ''">--name_label="<xsl:value-of select="$name_label" />"</xsl:if> <xsl:if test="$version_label != ''">--version_label="<xsl:value-of select="$version_label" />"</xsl:if> <xsl:if test="$product_label != ''">--product_label="<xsl:value-of select="$product_label" />"</xsl:if>
 
 # Update Icon cache if it exists
 %post -n <xsl:value-of select="$book-title"/>-<xsl:value-of select="$lang"/>
