@@ -4,7 +4,9 @@
   - Cleaned up README file.
   - Catch empty tags that break packaging. (abstract, subtitle)
   - Add rpmlint check for mock builds.
-  - corrected document conventions text. BZ#651616
+  - Corrected document conventions text. BZ#651616
+  - Add update_db action to allow more robust packaging. BZ #661948
+  - Fix show_unknown not working. BZ #662162
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
